--- a/springbootDemo/src/main/resources/mystatic/index.html
+++ b/springbootDemo/src/main/resources/mystatic/index.html
@@ -5,6 +5,24 @@
     <title>欢迎页面</title>
 </head>
 <body>
-欢迎来到页面
+欢迎 restFul
+
+<form action="/user" method="get">
+    <button>查询</button>
+</form>
+<form action="/user" method="post">
+    <button>添加</button>
+</form>
+<form action="/user" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <input type="hidden" name="_m" value="delete">
+    <button>删除</button>
+</form>
+<form action="/user" method="post">
+    <input type="hidden" name="_m" value="put">
+    <input type="hidden" name="_method" value="put">
+    <button>更新</button>
+</form>
+
 </body>
 </html>
